--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,8 @@ Binaries/*
 Plugins/*/Binaries/*
 # Builds
 Build/*
-
+Content/*/Assets
+Content/*/ThirdPerson
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
 Build/*/**
