--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,4 +11,8 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Health",DevComment="Amount of damage a player can take before death")
 +GameplayTagList=(Tag="Attributes.Vital.MaxHealth",DevComment="")
++GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
++GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
++GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
++GameplayTagList=(Tag="Message.ManaPotion",DevComment="")
 
