--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,6 +60,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/BlueRPG")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/BlueRPG")
+AssetManagerClassName=/Script/BlueRPG.BRAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
